# mc6

./: .gitignore  Cargo.toml  Dockerfile  mauve.yaml
backend/: Cargo.toml
backend/src/: backend.rs  collection.rs  config.rs  errors.rs  indexer.rs  labels.rs  lib.rs  meta.rs  objects.rs
backend/src/api/: collections.rs  mod.rs  objects.rs  search.rs
backend/src/query/: request.rs
backend/src/search/: mod.rs  search.rs
cluster/: Cargo.toml
cluster/src/: lib.rs  storage.rs
cluster/src/log_store/: mod.rs  ops.rs
cluster/src/state_machine/: machine.rs  mod.rs  snapshot.rs
cmd/: Cargo.toml
cmd/mauved/: main.rs
macros/src/: lib.rs
src/: backend.rs  collection.rs  config.rs  errors.rs  main.rs  storage.rs
src/api/: collections.rs  mod.rs  objects.rs
