[workspace]
resolver = "2"
members = [
    "backend", 
    "macros",
]

[workspace.dependencies]
anyhow = "1.0"
bincode = "1.0"
bytes = "1.6"
ciborium = "0.2"
clap = { version = "4.5", features = ["derive"] }
dashmap = "6.0"
figment = { version = "0.10", features = ["yaml"] }
flume = "0.11"
futures = "0.3"
log = { version = "0.4", features = ["kv", "kv_serde", "serde"] }
rand = { version = "0.8" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simplelog = { version = "0.12", features = ["paris"] }
sled = "0.34"
thiserror = "1.0"
tokio = { version = "1.39", features = ["full"] }
