[package]
name = "mc6_backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "mc6_backend"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }
figment = { workspace = true }
log = { workspace = true }
rocket = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sled = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
