[package]
name = "mc6_backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "mc6_backend"
path = "src/lib.rs"

[dependencies]
macros = { path = "../macros" }
anyhow = { workspace = true }
ciborium = { workspace = true }
dashmap = { workspace = true }
figment = { workspace = true }
flume = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sled = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
